Ensure text remains visible during webfont load

--- a/src/routes/root.css
+++ b/src/routes/root.css
@@ -3,11 +3,13 @@
 @font-face {
   font-family: fustat;
   src: url("../assets/fonts/Fustat-VariableFont_wght.woff2");
+  font-display: swap;
 }
 
 @font-face {
   font-family: open-sans;
   src: url("../assets/fonts/OpenSans-VariableFont_wdth,wght.woff2");
+  font-display: swap;
 }
 
 @theme {
